mobile horizontal scroll fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,7 @@
 @import 'destyle';
 @import 'keyframes';
 
-html {
+html, body {
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
